@@ -34,6 +34,8 @@
 #include "basedefs.h"
 #include <math.h>
 #include <assert.h>
+#include <stdbool.h>
+#include <stdio.h>
 
 IW_EXTERN_C_START
 
@@ -333,6 +335,8 @@ IW_EXPORT int iwlog2_32(uint32_t val);
 IW_EXPORT int iwlog2_64(uint64_t val);
 
 IW_EXPORT uint32_t iwu_crc32(const uint8_t *buf, int len, uint32_t init);
+
+IW_EXPORT int iwu_cmp_files(FILE *f1, FILE *f2, bool verbose);
 
 IW_EXTERN_C_END
 
