@@ -44,7 +44,7 @@ IW_EXPORT iwrc iwxstr_cat(IWXSTR *xstr, const void *buf, int size);
 
 IW_EXPORT iwrc iwxstr_unshift(IWXSTR *xstr, const void *buf, int size);
 
-IW_EXPORT void *iwxstr_ptr(IWXSTR *xstr);
+IW_EXPORT char *iwxstr_ptr(IWXSTR *xstr);
 
 IW_EXPORT int iwxstr_size(IWXSTR *xstr);
 
