@@ -1,6 +1,8 @@
 iowow (1.2.9) UNRELEASED; urgency=medium
 
   * Fixed type in iwconv.h iwtoa renamed to iwitoa
+  * Added iwu_cmp_files into iwutils.h
+  * Return type of iwxstr_ptr(IWXSTR*) changed to char* 
 
  -- Anton Adamansky <adamansky@gmail.com>  Thu, 24 May 2018 16:03:53 +0700
 
